# em-physics

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
benches/: network_impedance.rs
examples/: bevy_circuit.rs  rlc_sweep.rs
src/: constants.rs  errors.rs  lib.rs  materials.rs  math.rs  prelude.rs  simulation.rs  sweep.rs  units.rs
src/circuits/: analysis.rs  component.rs  iterative.rs  mod.rs  network.rs  nport.rs  ordering.rs  solver.rs  sparse.rs  spice.rs  stamp.rs  transmission.rs  twoport.rs
src/fields/: bem.rs  electric.rs  electrostatic.rs  magnetic.rs  mod.rs  retarded.rs  sources.rs
src/io/: hdf5.rs  mod.rs  vtk.rs
